# data

./: *compilation*  CMakeLists.txt  Doxyfile.in  Makefile
data/: CMakeLists.txt  config.hpp.in  data.hpp  delay.hpp  either.hpp  import.hpp  list.hpp  maybe.hpp  optional.hpp  shared.hpp  vector.hpp  zipper.hpp
data_testing/: CMakeLists.txt  delay_test.cpp  either_test.cpp  list_test.cpp  optional_test.cpp  shared_test.cpp  test_macros.hpp
